metodo show Swagger y documentacion
